[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/Ships/ship_0004.png" type="Texture" id=1]
[ext_resource path="res://Menu/MenuButton.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Kenney/Kenney Future Narrow.ttf" type="DynamicFontData" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="TextureButton" type="TextureButton"]
margin_top = 150.0
margin_right = 500.0
margin_bottom = 150.0
focus_mode = 1
theme = SubResource( 1 )
script = ExtResource( 2 )

[node name="leftPlane" type="Sprite" parent="."]
position = Vector2( 150, 0 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="rightPlane" type="Sprite" parent="."]
position = Vector2( 350, 0 )
rotation = -1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][color=yellow] Text Button [/color][/center]"
text = " Text Button "

[connection signal="focus_entered" from="." to="." method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TextureButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureButton_mouse_exited"]
